First commited as before_53456_rev1