@@ -12,6 +12,8 @@
 package org.eclipse.jface.preference;
 
 import org.eclipse.swt.SWT;
+import org.eclipse.swt.events.DisposeEvent;
+import org.eclipse.swt.events.DisposeListener;
 import org.eclipse.swt.events.SelectionAdapter;
 import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.layout.GridData;
@@ -213,7 +215,12 @@ public class ScaleFieldEditor extends FieldEditor {
                     valueChanged();
                 }
             });
-            scale.addDisposeListener(event -> scale = null);
+            scale.addDisposeListener(new DisposeListener() {
+                @Override
+				public void widgetDisposed(DisposeEvent event) {
+                    scale = null;
+                }
+            });
         } else {
             checkParent(scale, parent);
         }
@@ -339,7 +346,8 @@ public class ScaleFieldEditor extends FieldEditor {
         int newValue = scale.getSelection();
         if (newValue != oldValue) {
             fireStateChanged(IS_VALID, false, true);
-			fireValueChanged(VALUE, Integer.valueOf(oldValue), Integer.valueOf(newValue));
+            fireValueChanged(VALUE, new Integer(oldValue),
+                    new Integer(newValue));
             oldValue = newValue;
         }
     }
